--- a/webrtc.html
+++ b/webrtc.html
@@ -1,106 +1,216 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Voice Call - WebRTC</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="utf-8" />
+  <title>Voice Call App</title>
+  <script src="https://unpkg.com/peerjs@1.3.2/dist/peerjs.min.js"></script>
   <style>
-    * {
-      box-sizing: border-box;
-    }
     body {
-      margin: 0;
-      font-family: 'Orbitron', sans-serif;
-      background: linear-gradient(135deg, #0f0f0f, #1a1a1a);
+      font-family: Arial, sans-serif;
+      background-color: #121212;
       color: #00ffe5;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
+      height: 100vh;
+      margin: 0;
     }
-    h2 {
-      margin-bottom: 10px;
-      font-size: 28px;
-      animation: flicker 1.5s infinite alternate;
-    }
-    @keyframes flicker {
-      0% { opacity: 1; }
-      100% { opacity: 0.85; }
-    }
-    .controls, .status, .room {
+    #controls, #call-controls, #status, #avatar, #roominfo {
       margin: 10px;
-      text-align: center;
     }
-    input, button {
-      font-family: 'Orbitron', sans-serif;
-      margin: 5px;
-      padding: 10px;
-      font-size: 18px;
-      border-radius: 8px;
-      border: none;
-      outline: none;
-      transition: 0.3s ease;
-    }
-    input {
-      background-color: #222;
-      color: #00ffe5;
-      border: 1px solid #00ffe5;
-    }
-    button {
-      background: #00ffe5;
-      color: #0f0f0f;
-      cursor: pointer;
-      box-shadow: 0 0 10px #00ffe5;
-    }
-    button:hover {
-      background: #0ff;
-      color: black;
-    }
-    .hidden {
+    #call-controls {
       display: none;
     }
-    #status, #usersCount {
-      margin-top: 20px;
-      font-size: 18px;
-    }
-    #avatars img {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      margin: 5px;
-      border: 2px solid #00ffe5;
-    }
-    #shareBtn, #micBtn, #endBtn {
-      margin: 10px;
+    button {
       padding: 10px 20px;
+      margin: 5px;
+      font-size: 16px;
+      background-color: #00ffe5;
+      color: #121212;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      box-shadow: 0 0 10px #00ffe5;
+      transition: background-color 0.3s ease;
+    }
+    button:hover {
+      background-color: #00ccbf;
+    }
+    input {
+      padding: 10px;
+      font-size: 16px;
+      width: 250px;
+      border-radius: 6px;
+      border: 1px solid #00ffe5;
+      background-color: #222;
+      color: #00ffe5;
+      outline: none;
+    }
+    #avatar img {
+      width: 64px;
+      height: 64px;
+      border-radius: 50%;
+      border: 2px solid #00ffe5;
+      box-shadow: 0 0 10px #00ffe5;
+    }
+    #status {
+      font-weight: bold;
       font-size: 18px;
+      min-height: 24px;
+    }
+    #roominfo {
+      font-size: 18px;
+      font-weight: 600;
     }
   </style>
 </head>
 <body>
-  <h2>WebRTC Voice Call</h2>
-  <div class="controls">
-    <input type="text" id="roomInput" placeholder="Enter Room ID" />
-    <button id="createBtn">Create</button>
-    <button id="joinBtn">Join</button>
+  <div id="controls">
+    <input type="text" id="roomId" placeholder="Enter Room ID or Name" autocomplete="off" />
+    <br />
+    <button onclick="createRoom()">Create Room</button>
+    <button onclick="joinRoom()">Join Room</button>
   </div>
-  <div class="status">
-    <p id="status">Initializing...</p>
-    <p id="usersCount"></p>
+
+  <div id="status">Initializing...</div>
+  <div id="roominfo" style="display:none;"></div>
+  <div id="avatar" style="display:none;">
+    <img src="https://api.dicebear.com/7.x/thumbs/svg?seed=User" alt="User Avatar" />
   </div>
-  <div id="avatars"></div>
-  <div class="room hidden">
-    <p>Room ID: <span id="roomIdText"></span></p>
-    <button id="shareBtn">Share</button>
-    <button id="micBtn">Mic</button>
-    <button id="endBtn">End</button>
+
+  <div id="call-controls">
+    <button onclick="toggleMic()">Toggle Mic</button>
+    <button onclick="endCall()">End Call</button>
+    <button onclick="shareLink()">Share</button>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/simple-peer@9.11.1/simplepeer.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/socket.io-client@4.5.4/dist/socket.io.min.js"></script>
+
   <script>
-    // (JavaScript code remains unchanged)
+    let peer;
+    let call;
+    let localStream;
+    let micOn = true;
+    let room;
+
+    function logStatus(text) {
+      document.getElementById("status").innerText = text;
+    }
+
+    function generateAvatar(seed) {
+      return `https://api.dicebear.com/7.x/thumbs/svg?seed=${seed}`;
+    }
+
+    async function initPeer(id = undefined) {
+      peer = new Peer(id);
+
+      peer.on('open', (id) => {
+        room = id;
+        document.getElementById("roominfo").innerText = `Room: ${room}`;
+        document.getElementById("roominfo").style.display = "block";
+        document.getElementById("controls").style.display = "none";
+        document.getElementById("call-controls").style.display = "block";
+        document.getElementById("avatar").style.display = "block";
+        document.querySelector("#avatar img").src = generateAvatar(id);
+        logStatus("Waiting for user to join...");
+      });
+
+      peer.on('call', async (incomingCall) => {
+        localStream = await navigator.mediaDevices.getUserMedia({ audio: true, video: false });
+        incomingCall.answer(localStream);
+        handleCall(incomingCall);
+      });
+
+      peer.on('error', (err) => {
+        alert("Error: " + err);
+        logStatus("Error: " + err);
+      });
+    }
+
+    function handleCall(activeCall) {
+      call = activeCall;
+      call.on('stream', (remoteStream) => {
+        const audio = new Audio();
+        audio.srcObject = remoteStream;
+        audio.play();
+        logStatus("Connected");
+      });
+      call.on('close', () => {
+        logStatus("Call ended");
+        resetUI();
+      });
+    }
+
+    async function createRoom() {
+      const roomId = document.getElementById("roomId").value.trim();
+      await initPeer(roomId || undefined);
+    }
+
+    async function joinRoom() {
+      const roomId = document.getElementById("roomId").value.trim();
+      if (!roomId) {
+        alert("Please enter a Room ID to join");
+        return;
+      }
+
+      peer = new Peer();
+
+      peer.on('open', async (id) => {
+        room = roomId;
+        document.getElementById("roominfo").innerText = `Connected to: ${room}`;
+        document.getElementById("roominfo").style.display = "block";
+        document.getElementById("controls").style.display = "none";
+        document.getElementById("call-controls").style.display = "block";
+        document.getElementById("avatar").style.display = "block";
+        document.querySelector("#avatar img").src = generateAvatar(id);
+        localStream = await navigator.mediaDevices.getUserMedia({ audio: true, video: false });
+        call = peer.call(room, localStream);
+        handleCall(call);
+      });
+
+      peer.on('error', (err) => {
+        alert("Error: " + err);
+        logStatus("Error: " + err);
+      });
+    }
+
+    function toggleMic() {
+      if (localStream) {
+        localStream.getAudioTracks()[0].enabled = !localStream.getAudioTracks()[0].enabled;
+        micOn = !micOn;
+        logStatus(micOn ? "Mic On" : "Mic Muted");
+      }
+    }
+
+    function endCall() {
+      if (call) call.close();
+      if (localStream) localStream.getTracks().forEach(t => t.stop());
+      logStatus("Call Ended");
+      resetUI();
+    }
+
+    function shareLink() {
+      const shareURL = `${window.location.origin + window.location.pathname}?room=${room}`;
+      navigator.clipboard.writeText(shareURL).then(() => {
+        alert("Share link copied to clipboard:\n" + shareURL);
+      });
+    }
+
+    function resetUI() {
+      document.getElementById("call-controls").style.display = "none";
+      document.getElementById("controls").style.display = "block";
+      document.getElementById("roominfo").style.display = "none";
+      document.getElementById("avatar").style.display = "none";
+      micOn = true;
+    }
+
+    // Auto-join if room ID is in URL
+    const urlParams = new URLSearchParams(window.location.search);
+    if (urlParams.has("room")) {
+      document.getElementById("roomId").value = urlParams.get("room");
+      joinRoom();
+    } else {
+      logStatus("Ready");
+    }
   </script>
 </body>
 </html>
