--- a/webrtc.html
+++ b/webrtc.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <title>Voice Call App</title>
   <script src="https://unpkg.com/peerjs@1.3.2/dist/peerjs.min.js"></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #121212;
-      color: #00ffe5;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -23,39 +23,42 @@
       display: none;
     }
     button {
-      padding: 10px 20px;
+      padding: 10px 24px;
       margin: 5px;
       font-size: 16px;
-      background-color: #00ffe5;
-      color: #121212;
+      background-color: #4a90e2;
+      color: white;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
       cursor: pointer;
-      box-shadow: 0 0 10px #00ffe5;
+      box-shadow: 0 3px 6px rgba(74,144,226,0.3);
       transition: background-color 0.3s ease;
     }
     button:hover {
-      background-color: #00ccbf;
+      background-color: #357ABD;
     }
     input {
-      padding: 10px;
+      padding: 10px 14px;
       font-size: 16px;
       width: 250px;
-      border-radius: 6px;
-      border: 1px solid #00ffe5;
-      background-color: #222;
-      color: #00ffe5;
+      border-radius: 8px;
+      border: 1.5px solid #ccc;
       outline: none;
+      transition: border-color 0.3s ease;
+      box-sizing: border-box;
+    }
+    input:focus {
+      border-color: #4a90e2;
     }
     #avatar img {
       width: 64px;
       height: 64px;
       border-radius: 50%;
-      border: 2px solid #00ffe5;
-      box-shadow: 0 0 10px #00ffe5;
+      border: 2px solid #4a90e2;
+      box-shadow: 0 2px 5px rgba(74,144,226,0.3);
     }
     #status {
-      font-weight: bold;
+      font-weight: 600;
       font-size: 18px;
       min-height: 24px;
     }
@@ -67,18 +70,14 @@
 </head>
 <body>
   <div id="controls">
-    <input type="text" id="roomId" placeholder="Enter Room ID or Name" autocomplete="off" />
-    <br />
+    <input type="text" id="roomId" placeholder="Enter Room ID or Name">
+    <br>
     <button onclick="createRoom()">Create Room</button>
     <button onclick="joinRoom()">Join Room</button>
   </div>
-
   <div id="status">Initializing...</div>
   <div id="roominfo" style="display:none;"></div>
-  <div id="avatar" style="display:none;">
-    <img src="https://api.dicebear.com/7.x/thumbs/svg?seed=User" alt="User Avatar" />
-  </div>
-
+  <div id="avatar" style="display:none;"><img src="https://api.dicebear.com/7.x/thumbs/svg?seed=User" /></div>
   <div id="call-controls">
     <button onclick="toggleMic()">Toggle Mic</button>
     <button onclick="endCall()">End Call</button>
@@ -119,11 +118,6 @@
         incomingCall.answer(localStream);
         handleCall(incomingCall);
       });
-
-      peer.on('error', (err) => {
-        alert("Error: " + err);
-        logStatus("Error: " + err);
-      });
     }
 
     function handleCall(activeCall) {
@@ -133,10 +127,6 @@
         audio.srcObject = remoteStream;
         audio.play();
         logStatus("Connected");
-      });
-      call.on('close', () => {
-        logStatus("Call ended");
-        resetUI();
       });
     }
 
@@ -166,11 +156,6 @@
         call = peer.call(room, localStream);
         handleCall(call);
       });
-
-      peer.on('error', (err) => {
-        alert("Error: " + err);
-        logStatus("Error: " + err);
-      });
     }
 
     function toggleMic() {
@@ -185,7 +170,7 @@
       if (call) call.close();
       if (localStream) localStream.getTracks().forEach(t => t.stop());
       logStatus("Call Ended");
-      resetUI();
+      document.getElementById("call-controls").style.display = "none";
     }
 
     function shareLink() {
@@ -193,14 +178,6 @@
       navigator.clipboard.writeText(shareURL).then(() => {
         alert("Share link copied to clipboard:\n" + shareURL);
       });
-    }
-
-    function resetUI() {
-      document.getElementById("call-controls").style.display = "none";
-      document.getElementById("controls").style.display = "block";
-      document.getElementById("roominfo").style.display = "none";
-      document.getElementById("avatar").style.display = "none";
-      micOn = true;
     }
 
     // Auto-join if room ID is in URL
