--- a/webrtc.html
+++ b/webrtc.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Voice Call App</title>
+  <meta charset="utf-8" />
+  <title>Video + Voice Call App</title>
   <script src="https://unpkg.com/peerjs@1.3.2/dist/peerjs.min.js"></script>
   <style>
     body {
@@ -66,18 +66,52 @@
       font-size: 18px;
       font-weight: 600;
     }
+
+    /* Video container styling */
+    #video-container {
+      display: none;
+      margin-top: 15px;
+      display: flex;
+      gap: 15px;
+      align-items: center;
+      justify-content: center;
+    }
+    #localVideo, #remoteVideo {
+      border-radius: 12px;
+      border: 2px solid #4a90e2;
+      box-shadow: 0 3px 8px rgba(74,144,226,0.4);
+      background-color: black;
+      object-fit: cover;
+    }
+    #localVideo {
+      width: 160px;
+      height: 120px;
+    }
+    #remoteVideo {
+      width: 320px;
+      height: 240px;
+    }
   </style>
 </head>
 <body>
   <div id="controls">
-    <input type="text" id="roomId" placeholder="Enter Room ID or Name">
-    <br>
+    <input type="text" id="roomId" placeholder="Enter Room ID or Name" />
+    <br />
     <button onclick="createRoom()">Create Room</button>
     <button onclick="joinRoom()">Join Room</button>
   </div>
   <div id="status">Initializing...</div>
   <div id="roominfo" style="display:none;"></div>
-  <div id="avatar" style="display:none;"><img src="https://api.dicebear.com/7.x/thumbs/svg?seed=User" /></div>
+  <div id="avatar" style="display:none;">
+    <img src="https://api.dicebear.com/7.x/thumbs/svg?seed=User" />
+  </div>
+
+  <!-- Video Elements -->
+  <div id="video-container">
+    <video id="localVideo" autoplay muted playsinline></video>
+    <video id="remoteVideo" autoplay playsinline></video>
+  </div>
+
   <div id="call-controls">
     <button onclick="toggleMic()">Toggle Mic</button>
     <button onclick="endCall()">End Call</button>
@@ -102,7 +136,7 @@
     async function initPeer(id = undefined) {
       peer = new Peer(id);
 
-      peer.on('open', (id) => {
+      peer.on("open", (id) => {
         room = id;
         document.getElementById("roominfo").innerText = `Room: ${room}`;
         document.getElementById("roominfo").style.display = "block";
@@ -113,8 +147,11 @@
         logStatus("Waiting for user to join...");
       });
 
-      peer.on('call', async (incomingCall) => {
-        localStream = await navigator.mediaDevices.getUserMedia({ audio: true, video: false });
+      peer.on("call", async (incomingCall) => {
+        localStream = await navigator.mediaDevices.getUserMedia({
+          audio: true,
+          video: true,
+        });
         incomingCall.answer(localStream);
         handleCall(incomingCall);
       });
@@ -122,11 +159,26 @@
 
     function handleCall(activeCall) {
       call = activeCall;
-      call.on('stream', (remoteStream) => {
-        const audio = new Audio();
-        audio.srcObject = remoteStream;
-        audio.play();
+
+      // Show video container
+      document.getElementById("video-container").style.display = "flex";
+
+      // Show local video
+      const localVideo = document.getElementById("localVideo");
+      localVideo.srcObject = localStream;
+      localVideo.play();
+
+      // When remote stream received
+      call.on("stream", (remoteStream) => {
+        const remoteVideo = document.getElementById("remoteVideo");
+        remoteVideo.srcObject = remoteStream;
+        remoteVideo.play();
         logStatus("Connected");
+      });
+
+      call.on("close", () => {
+        logStatus("Call ended");
+        document.getElementById("video-container").style.display = "none";
       });
     }
 
@@ -144,7 +196,7 @@
 
       peer = new Peer();
 
-      peer.on('open', async (id) => {
+      peer.on("open", async (id) => {
         room = roomId;
         document.getElementById("roominfo").innerText = `Connected to: ${room}`;
         document.getElementById("roominfo").style.display = "block";
@@ -152,7 +204,12 @@
         document.getElementById("call-controls").style.display = "block";
         document.getElementById("avatar").style.display = "block";
         document.querySelector("#avatar img").src = generateAvatar(id);
-        localStream = await navigator.mediaDevices.getUserMedia({ audio: true, video: false });
+
+        localStream = await navigator.mediaDevices.getUserMedia({
+          audio: true,
+          video: true,
+        });
+
         call = peer.call(room, localStream);
         handleCall(call);
       });
@@ -160,17 +217,21 @@
 
     function toggleMic() {
       if (localStream) {
-        localStream.getAudioTracks()[0].enabled = !localStream.getAudioTracks()[0].enabled;
-        micOn = !micOn;
-        logStatus(micOn ? "Mic On" : "Mic Muted");
+        const audioTrack = localStream.getAudioTracks()[0];
+        if (audioTrack) {
+          audioTrack.enabled = !audioTrack.enabled;
+          micOn = audioTrack.enabled;
+          logStatus(micOn ? "Mic On" : "Mic Muted");
+        }
       }
     }
 
     function endCall() {
       if (call) call.close();
-      if (localStream) localStream.getTracks().forEach(t => t.stop());
+      if (localStream) localStream.getTracks().forEach((t) => t.stop());
       logStatus("Call Ended");
       document.getElementById("call-controls").style.display = "none";
+      document.getElementById("video-container").style.display = "none";
     }
 
     function shareLink() {
