--- a/webrtc.html
+++ b/webrtc.html
@@ -2,100 +2,31 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Video + Voice Call App</title>
+  <title>ChatNXT Call</title>
   <script src="https://unpkg.com/peerjs@1.3.2/dist/peerjs.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     * {
       box-sizing: border-box;
     }
 
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f0f4f8;
-      color: #333;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      padding: 20px;
-      height: 100vh;
       margin: 0;
-    }
-
-    #controls, #call-controls, #status, #avatar, #roominfo {
-      margin: 10px 0;
-      text-align: center;
-    }
-
-    input {
-      padding: 12px 16px;
-      font-size: 16px;
-      width: 100%;
-      max-width: 300px;
-      border-radius: 8px;
-      border: 1.5px solid #ccc;
-      outline: none;
-      margin-bottom: 10px;
-    }
-
-    button {
-      width: 90%;
-      max-width: 300px;
-      padding: 12px;
-      font-size: 16px;
-      background-color: #4a90e2;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      margin: 5px auto;
-      cursor: pointer;
-      box-shadow: 0 3px 6px rgba(74, 144, 226, 0.3);
-      transition: background-color 0.3s ease;
-      display: block;
-    }
-
-    button:hover {
-      background-color: #357ABD;
-    }
-
-    #avatar img {
-      width: 72px;
-      height: 72px;
-      border-radius: 50%;
-      border: 2px solid #4a90e2;
-      box-shadow: 0 2px 5px rgba(74,144,226,0.3);
-    }
-
-    #status {
-      font-weight: 600;
-      font-size: 18px;
-      min-height: 24px;
-    }
-
-    #roominfo {
-      font-size: 18px;
-      font-weight: 600;
-      word-break: break-word;
-    }
-
-    #call-controls {
-      display: none;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #111;
+      color: #fff;
+      overflow: hidden;
     }
 
     #video-container {
-      position: relative;
-      width: 100%;
-      max-width: 400px;
-      height: 600px;
-      background-color: #000;
-      border-radius: 12px;
-      overflow: hidden;
-      margin-top: 20px;
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: #000;
     }
 
-    #localVideo, #remoteVideo {
+    video {
       position: absolute;
-      border-radius: 12px;
       width: 100%;
       height: 100%;
       object-fit: cover;
@@ -105,35 +36,110 @@
       width: 120px;
       height: 160px;
       position: absolute;
-      top: 12px;
-      right: 12px;
-      z-index: 2;
-      border: 2px solid white;
-      box-shadow: 0 0 10px rgba(255,255,255,0.2);
+      bottom: 20px;
+      right: 20px;
+      z-index: 3;
+      border-radius: 12px;
+      border: 2px solid #fff;
+      box-shadow: 0 0 10px rgba(255,255,255,0.3);
     }
 
-    @media screen and (max-width: 480px) {
-      body {
-        padding: 10px;
-      }
+    #header {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      background: rgba(0,0,0,0.6);
+      padding: 12px 16px;
+      display: flex;
+      align-items: center;
+      z-index: 5;
+    }
 
-      input, button {
-        font-size: 14px;
-        padding: 10px;
-      }
+    #header img {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      border: 2px solid #4a90e2;
+      margin-right: 12px;
+    }
 
-      #avatar img {
-        width: 60px;
-        height: 60px;
-      }
+    #header h3 {
+      margin: 0;
+      font-size: 18px;
+    }
 
-      #video-container {
-        height: 400px;
-      }
+    #call-controls {
+      position: absolute;
+      bottom: 20px;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      z-index: 4;
+    }
 
+    .control-btn {
+      width: 60px;
+      height: 60px;
+      background-color: rgba(255, 255, 255, 0.1);
+      border: none;
+      border-radius: 50%;
+      color: white;
+      font-size: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0 0 10px rgba(255,255,255,0.1);
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .control-btn:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+    }
+
+    .end-btn {
+      background-color: #ff4d4d;
+    }
+
+    #controls {
+      padding: 30px;
+      text-align: center;
+    }
+
+    #controls input {
+      padding: 14px;
+      font-size: 16px;
+      width: 90%;
+      max-width: 300px;
+      border-radius: 10px;
+      border: none;
+      margin-bottom: 12px;
+    }
+
+    #controls button {
+      padding: 12px;
+      font-size: 16px;
+      background-color: #4a90e2;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      width: 90%;
+      max-width: 300px;
+      margin: 5px 0;
+      cursor: pointer;
+    }
+
+    #status {
+      text-align: center;
+      margin: 10px;
+      color: #aaa;
+    }
+
+    @media screen and (max-width: 600px) {
       #localVideo {
-        width: 100px;
-        height: 130px;
+        width: 90px;
+        height: 120px;
       }
     }
   </style>
@@ -143,23 +149,23 @@
     <input type="text" id="roomId" placeholder="Enter Room ID or Name">
     <button onclick="createRoom()">Create Room</button>
     <button onclick="joinRoom()">Join Room</button>
-  </div>
-
-  <div id="status">Initializing...</div>
-  <div id="roominfo" style="display:none;"></div>
-  <div id="avatar" style="display:none;">
-    <img src="https://api.dicebear.com/7.x/thumbs/svg?seed=User" />
+    <div id="status">Ready</div>
   </div>
 
   <div id="video-container" style="display: none;">
-    <video id="localVideo" autoplay muted playsinline></video>
     <video id="remoteVideo" autoplay playsinline></video>
-  </div>
+    <video id="localVideo" autoplay muted playsinline></video>
 
-  <div id="call-controls">
-    <button onclick="toggleMic()">Toggle Mic</button>
-    <button onclick="endCall()">End Call</button>
-    <button onclick="shareLink()">Share</button>
+    <div id="header">
+      <img src="https://api.dicebear.com/7.x/thumbs/svg?seed=User" id="avatar">
+      <h3 id="roominfo">Connecting...</h3>
+    </div>
+
+    <div id="call-controls">
+      <button class="control-btn" onclick="toggleMic()">🎙️</button>
+      <button class="control-btn end-btn" onclick="endCall()">❌</button>
+      <button class="control-btn" onclick="shareLink()">🔗</button>
+    </div>
   </div>
 
   <script>
@@ -183,12 +189,9 @@
       peer.on('open', (id) => {
         room = id;
         document.getElementById("roominfo").innerText = `Room: ${room}`;
-        document.getElementById("roominfo").style.display = "block";
         document.getElementById("controls").style.display = "none";
-        document.getElementById("call-controls").style.display = "block";
-        document.getElementById("avatar").style.display = "block";
         document.getElementById("video-container").style.display = "block";
-        document.querySelector("#avatar img").src = generateAvatar(id);
+        document.getElementById("avatar").src = generateAvatar(id);
         logStatus("Waiting for user to join...");
       });
 
@@ -225,12 +228,9 @@
       peer.on('open', async (id) => {
         room = roomId;
         document.getElementById("roominfo").innerText = `Connected to: ${room}`;
-        document.getElementById("roominfo").style.display = "block";
         document.getElementById("controls").style.display = "none";
-        document.getElementById("call-controls").style.display = "block";
-        document.getElementById("avatar").style.display = "block";
         document.getElementById("video-container").style.display = "block";
-        document.querySelector("#avatar img").src = generateAvatar(id);
+        document.getElementById("avatar").src = generateAvatar(id);
 
         localStream = await navigator.mediaDevices.getUserMedia({ audio: true, video: true });
         document.getElementById('localVideo').srcObject = localStream;
@@ -252,24 +252,20 @@
       if (call) call.close();
       if (localStream) localStream.getTracks().forEach(t => t.stop());
       logStatus("Call Ended");
-      document.getElementById("call-controls").style.display = "none";
-      document.getElementById("video-container").style.display = "none";
+      location.reload();
     }
 
     function shareLink() {
       const shareURL = `${window.location.origin + window.location.pathname}?room=${room}`;
       navigator.clipboard.writeText(shareURL).then(() => {
-        alert("Share link copied to clipboard:\n" + shareURL);
+        alert("Share link copied:\n" + shareURL);
       });
     }
 
-    // Auto join if room param exists
     const urlParams = new URLSearchParams(window.location.search);
     if (urlParams.has("room")) {
       document.getElementById("roomId").value = urlParams.get("room");
       joinRoom();
-    } else {
-      logStatus("Ready");
     }
   </script>
 </body>
